# auditor_helper

./: .gitignore  ANALYSIS_WIDGET_PLAN.md  CHANGESLOG.md  EVENT_DRIVEN_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_ANALYSIS.md  NEXT_LEVEL_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATION.md  QML_MIGRATION_STRATEGY.md  README.md  agent.json  analysis_widget.py  build_app.py  db_schema.py  future_ideas.mc  global_settings.json  main.py  options_dialog.py  requirements_full.txt  requirements_light.txt  startup_performance.json  task_grid.py  tasks.db  theme_manager.py  timer_dialog.py  toaster.py  week_widget.py
analysis_module/: chart_manager.py  chart_styling.py  common_errors_log.md  data_manager.py  drag_drop_list_widget.py
docs/: BUG_DIAGNOSTIC_REPORT.md  BUG_FIX_REPORT.md  BUILD_FIXES_SUMMARY.md  BUILD_INSTRUCTIONS.md  CACHING_DEEP_DIVE_ANALYSIS.md  CHANGELOG.md  CHANGESLOG.md  CHARTING_COMPONENT_ANALYSIS_REPORT.md  CHARTING_IMPLEMENTATION_ROADMAP.md  COLLAPSIBLE_SIDEBAR_FIX_REPORT.md  DATABASE_INITIALIZATION_ANALYSIS_REPORT.md  DATABASE_SCHEMA_FIX_REPORT.md  DATA_ARCHITECTURE.md  DEFAULT_VALUES_CONFIGURATION.md  DEVELOPMENT_SETUP.md  DUAL_BUILD_SYSTEM.md  ERROR_LOG_ICON_ISSUES.md  GHOSTING_RESIZE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_ANALYSIS_REPORT.md  PHASE3_IMPLEMENTATION_PLAN.md  PROJECT_ORGANIZATION.md  RELEASE_NOTES_v0.18.3.md  REORGANIZATION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TASK_GRID_SCROLL_ANALYSIS_REPORT.md  TASK_GRID_SCROLL_IMPLEMENTATION_SUMMARY.md  (+5 more)
rust_extensions/: Cargo.toml  pyproject.toml
rust_extensions/src/: lib.rs
(+137 files in other folders)
