[package]
name = "rust_extensions"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust extensions for Auditor Helper"

[lib]
name = "rust_extensions"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
numpy = "0.22.0"
ndarray = "0.16.1"
statrs = "0.17.1"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.0"
parking_lot = "0.12.0"
